# poly_ops

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  common.h  test.c  test_poly_ops_neon  test_poly_ops_sve
build_sve/: CMakeCache.txt  Makefile  cmake_install.cmake  test_poly_ops_sve
src/: poly_c.c  poly_caddq_asm.S  poly_caddq_asm_sve.S  poly_chknorm_asm.S  poly_chknorm_asm_sve.S
src/include/: arith_native_aarch64.h
